--- a/src/assets/css/category-page.scss
+++ b/src/assets/css/category-page.scss
@@ -10,28 +10,89 @@
 	    	font-size: 0.764706rem;
 	    }
 	}
-	&__container {
-		padding: 4.94rem 5.3rem;
-		box-sizing: border-box;
-		margin-bottom: 3.64706rem;
+	&__masonry-wrapper {
+		margin: 0 170px 0px 90px;
+		position: relative;
+		width: 100% !important;
 		display: flex;
 		flex-wrap: wrap;
+		flex-basis: 100%;
+	    order: 1;
+
+
+	}
+	&__container {
+		padding: 4.94rem 5.3rem;
+		// padding: 4.94rem 0;
+		display: flex;
+		flex-wrap: wrap;
+
+		justify-content: center;
+		box-sizing: border-box;
+		margin-bottom: 3.64706rem;
+		// display: flex;
+		width: auto !important;
+		// width: 100% !important;
+		// flex-wrap: wrap;
 		justify-content: space-between;
 		&:after {
 			content: '';
 			flex: 1;
 			max-width: calc(100% / 3 - 2.05882rem);
+			flex-basis: calc(100% / 3 - 2.05882rem);
 		}
 		// margin-right: -3.11765rem;
 	}
 	&__item {
 		// flex-basis: auto;
-		flex-grow: 1;
-		max-width: calc(100% / 3 - 2.05882rem);
+		// flex: 1;
+		// flex-grow: 1;
+		max-width: calc(100% / 3 - 25px);
 		// margin-right: 3.11765rem;
-		margin-bottom: 3.11765rem;
+	    // max-height: 266px;
+	    // height: 16vw;
+	    width: calc(100% / 3);
+	    // flex-basis: 10%;
+	    // width: 20%;
+		// flex: 1;
+
+		// width: 100%;
+
+
+
+	 //    display: block;
+		margin-bottom: 35px;
+		// width: calc(100% / 3);
+
+
+		position: relative;
+		background-color: #e2e5ee;
+		height: 20vw;
+	    display: flex;
+		justify-content: center;
+		box-sizing: border-box;
+		padding: 20px;
 	}
 	&__item-img {
-		@extend %img;
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+		// @extend %img;
 	}
+
 }
+	#test2 {
+		width: calc(100% / 3);
+
+	}
+	#test {
+		width: 40px;
+		position: absolute;
+
+		// margin: 20px;
+		// display: none;
+		// width: calc(100% / 3 - 60px);
+
+		// width: 318px;
+		// width: 10%;
+	}
