--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -37,6 +37,9 @@ body {
 .fancybox-enabled {
 	overflow: auto !important;
 }
+.footer__x4 {
+  text-decoration: underline;
+}
 // imports site part
 @import 'header';
 @import 'category-page';
